I see this error with the app, reported by NextJS, please fix it. The error is reported as HTML but presented visually to the user).
A > before the line number in the error source usually indicates the line of interest:

> <!DOCTYPE html><html id="__next_error__"><head><meta charSet="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/><link rel="preload" as="script" fetchPriority="low" href="/_next/static/chunks/%5Bturbopack%5D_browser_dev_hmr-client_hmr-client_ts_49a6ea35._.js"/><script src="/_next/static/chunks/node_modules_next_dist_compiled_2ce9398a._.js" async=""></script><script src="/_next/static/chunks/node_modules_next_dist_client_43e3ffb8._.js" async=""></script><script src="/_next/static/chunks/node_modules_next_dist_3bfaed20._.js" async=""></script><script src="/_next/static/chunks/node_modules_%40swc_helpers_cjs_00636ac3._.js" async=""></script><script src="/_next/static/chunks/_e69f0d32._.js" async=""></script><script src="/_next/static/chunks/_be317ff2._.js" async=""></script><script src="/_next/static/chunks/node_modules_next_dist_1a6ee436._.js" async=""></script><script src="/_next/static/chunks/src_app_favicon_ico_mjs_79b6a596._.js" async=""></script><meta name="robots" content="noindex"/><meta name="next-size-adjust" content=""/><meta name="next-error" content="not-found"/><!--$--><!--/$--><script src="/_next/static/chunks/node_modules_next_dist_build_polyfills_polyfill-nomodule.js" noModule=""></script></head><body><script src="/_next/static/chunks/%5Bturbopack%5D_browser_dev_hmr-client_hmr-client_ts_49a6ea35._.js" async=""></script><script>(self.__next_f=self.__next_f||[]).push([0])</script><script>self.__next_f.push([1,"3:\"$Sreact.fragment\"\n5:I[\"[project]/node_modules/next/dist/client/components/layout-router.js [app-client] (ecmascript)\",[\"static/chunks/node_modules_next_dist_1a6ee436._.js\",\"static/chunks/src_app_favicon_ico_mjs_79b6a596._.js\"],\"default\"]\n6:I[\"[project]/node_modules/next/dist/client/compon

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -260,4 +260,21 @@ body {
        transform: translate(1px, 1px);
    }
 
+    /* Retro Minimized Tab Styling (in Status Bar) */
+   .retro-minimized-tab {
+        @apply px-2 py-0.5 bg-card border border-b-border-dark border-r-border-dark border-t-border-light border-l-border-light text-foreground text-xs truncate max-w-[100px]; /* Truncate long names */
+        box-shadow: inset 1px 1px 0px 0px hsl(var(--border-light)), inset -1px -1px 0px 0px hsl(var(--border-dark));
+        cursor: default;
+    }
+     .retro-minimized-tab:hover {
+        background-color: hsl(var(--secondary));
+     }
+     .retro-minimized-tab:active {
+        @apply border-t-border-dark border-l-border-dark border-b-border-light border-r-border-light;
+        box-shadow: inset -1px -1px 0px 0px hsl(var(--border-light)), inset 1px 1px 0px 0px hsl(var(--border-dark));
+        transform: translate(1px, 1px);
+     }
+
 }
+
+    
